--- a/aboutme.html
+++ b/aboutme.html
@@ -16,26 +16,26 @@
     <h2>This is my family!</h1>
 	<br>
     <h2> My Mom</h2>
-     <img src="./Mom's Picture.jpg" height="300">
+     <img src="Mom's Picture.jpg" height="300">
     <h2>My Dad</h2>
-      <img src="./Dad's Picture.JPG" height="300">
+      <img src="Dad's Picture.JPG" height="300">
       <br> 
     <h2>Sachi (My Best Friend <3)</h2>
-      <img src="./Sachi #1.jpg" height="300">
-	<img src="./Sachi #2.jpg" height="300">
+      <img src="Sachi #1.jpg" height="300">
+	<img src="Sachi #2.jpg" height="300">
 <br>
     <h2>My Friends</h2>
-      <img src="./Friends photo #1.jpg" height="300">
-      <img src="./with aarya.jpg" height="300">
+      <img src="Friends photo #1.jpg" height="300">
+      <img src="with aarya.jpg" height="300">
       <br>
-      <img src="./With Brent.jpg" height="300">
-      <img src="./Friends #4.jpg" height="300">
+      <img src="With Brent.jpg" height="300">
+      <img src="Friends #4.jpg" height="300">
       <br>
     <br>
     <h2>My Favourites</h2>
-    <img src="./Winnie The Pooh.jpg" height="300">
+    <img src="Winnie The Pooh.jpg" height="300">
 	<h3>Winnie The Pooh</h3>
-<img src="./Winnie The Pooh.jpg" height="300">
+<img src="Winnie The Pooh.jpg" height="300">
     <br>
     </center>
     </a>
