--- a/aboutme.html
+++ b/aboutme.html
@@ -10,8 +10,8 @@
     <a href="aboutme.html">About Me</a>
     <center>
 	<h1>All About Me</h1>
-	<img src=".My Picture.JPG" height="400">
-	<img src="./My Picture#2.jpg" height="400">
+	<img src="My Picture.JPG" height="400">
+	<img src="My Picture#2.jpg" height="400">
 	<br>
     <h2>This is my family!</h1>
 	<br>
