--- a/aboutme.html
+++ b/aboutme.html
@@ -21,15 +21,15 @@
       <img src="Dad's Picture.JPG" height="300">
       <br> 
     <h2>Sachi (My Best Friend <3)</h2>
-      <img src="Sachi #1.jpg" height="300">
-	<img src="Sachi #2.jpg" height="300">
+      <img src="Sachi #1.JPEG" height="300">
+	<img src="Sachi #2.JPG" height="300">
 <br>
     <h2>My Friends</h2>
-      <img src="Friends photo #1.jpg" height="300">
-      <img src="with aarya.jpg" height="300">
+      <img src="Friends photo #1.JPG" height="300">
+      <img src="with aarya.JPG" height="300">
       <br>
-      <img src="With Brent.jpg" height="300">
-      <img src="Friends #4.jpg" height="300">
+      <img src="With Brent.JPG" height="300">
+      <img src="Friends #4.JPG" height="300">
       <br>
     <br>
     <h2>My Favourites</h2>
