--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
 	<img src="Sachi #2.JPG" height="300">
 <br>
     <h2>My Friends</h2>
-      <img src="Friends photo #1.JPG" height="300">
+      <img src="friend1.jpg" height="300">
       <img src="with aarya.JPG" height="300">
       <br>
       <img src="With Brent.JPG" height="300">
