--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
       <img src="with aarya.JPG" height="300">
       <br>
       <img src="With Brent.JPG" height="300">
-      <img src="Friends #4.JPG" height="300">
+      <img src="Friends4.JPG" height="300">
       <br>
     <br>
     <h2>My Favourites</h2>
