--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <center>
 	<h1>All About Me</h1>
 	<img src="My Picture.JPG" height="400">
-	<img src="My Picture#2.jpg" height="400">
+	<img src="My Picture2.jpg" height="400">
 	<br>
     <h2>This is my family!</h1>
 	<br>
@@ -21,8 +21,8 @@
       <img src="Dad's Picture.JPG" height="300">
       <br> 
     <h2>Sachi (My Best Friend <3)</h2>
-      <img src="Sachi #1.JPEG" height="300">
-	<img src="Sachi #2.JPG" height="300">
+      <img src="Sachi1.JPEG" height="300">
+	<img src="Sachi2.JPG" height="300">
 <br>
     <h2>My Friends</h2>
       <img src="friend1.jpg" height="300">
