--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,8 @@
     <h2>My Favourites</h2>
     <img src="Winnie The Pooh.jpg" height="300">
 	<h3>Winnie The Pooh</h3>
-<img src="Winnie The Pooh.jpg" height="300">
+<img src="Buldak Ramen.JPG" height="300">
+	<h3>My favourite Ramen</h3>
     <br>
     </center>
     </a>
