--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Mr. Dunlea's Class</title>
+    <title>Riti Karthikeyan's Website</title>
   </head>
-  <body bgcolor="#DAF7A6">
+  <body bgcolor="#FFFF00">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <center style="background-color: aquamarine;">
+    <center style="background-color: light yellow;">
+      <img src="" height="400" alt="centered image" class="aligncenter">
       <h1>Home</h1>
       <img src="images/MyHouse.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>PoolHouse</h2>
