--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center style="background-color: light yellow;">
-      <img src="" height="400" alt="centered image" class="aligncenter">
+      <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
       <h1>Home</h1>
       <img src="images/MyHouse.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>PoolHouse</h2>
