--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <title>Riti Karthikeyan's Website</title>
   </head>
-  <body bgcolor="#FFFF00">
+  <body bgcolor="#ffffe8">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center style="background-color: light yellow;">
       <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
-      <h1>Home</h1>
-      <img src="images/MyHouse.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>PoolHouse</h2>
-      <img src="images/PoolHouse.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>Garden One</h2>
-      <img src="images/Garden1.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>Garden Two</h2>
+      <h1>My Home</h1>
+      <img src="My house.jpg" height="400" alt="centered image" class="aligncenter">
+      <h2>My Pool</h2>
+      <img src="My pool.jpg" height="400" alt="centered image" class="aligncenter">
+      <h2>My Bedroom</h2>
+      <img src="My Room.jpg" height="400" alt="centered image" class="aligncenter">
+      <h2>My Garden</h2>
       <img src="images/Garden2.jpg" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
