--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>My Bedroom</h2>
       <img src="My Room.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>My Garden</h2>
-      <img src="images/Garden2.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="My Garden.jpg" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
     <h1>Jeopardy!</h1>
