--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <center style="background-color: light yellow;">
       <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
       <h1>My Home</h1>
-      <img src="My house.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="My house.JPG" height="400" alt="centered image" class="aligncenter">
       <h2>My Pool</h2>
-      <img src="My pool.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="My pool.JPG" height="400" alt="centered image" class="aligncenter">
       <h2>My Bedroom</h2>
-      <img src="My Room.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="My Room.JPG" height="400" alt="centered image" class="aligncenter">
       <h2>My Garden</h2>
-      <img src="My Garden.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="My Garden.JPG" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
     <h1>Jeopardy!</h1>
