--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <center style="background-color: light yellow;">
       <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
       <h1>My Home</h1>
-      <img src="My house.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="My house.JPG" height="600" width="200" alt="centered image" class="aligncenter">
       <h2>My Pool</h2>
       <img src="My pool.JPG" height="400" alt="centered image" class="aligncenter">
       <h2>My Bedroom</h2>
