--- a/index.html
+++ b/index.html
@@ -14,26 +14,16 @@
       <h1>My Home</h1>
       <img src="My house.JPG" height="600" width="600" alt="centered image" class="aligncenter">
       <h2>My Pool</h2>
-      <img src="My pool.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="My pool.JPG" height="600" width="600"  alt="centered image" class="aligncenter">
       <h2>My Bedroom</h2>
-      <img src="My Room.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="My Room.JPG" height="600" width="600" alt="centered image" class="aligncenter">
       <h2>My Garden</h2>
-      <img src="My Garden.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="My Garden.JPG" height="600" width="600" alt="centered image" class="aligncenter">
    </center>
-  <br>
-    <h1>Jeopardy!</h1>
-  <audio controls>
-    <source src="Jeopardy.mp3" type="audio/mpeg">
-  </audio>
-  <br>
-    <h1>Jaws!</h1>
-  <audio controls>
-    <source src="Jaws.mp3" type="audio/mpeg">
-  </audio>
-  <br>
-    <h1>Mission Impossible!</h1>
-  <audio controls autoplay loop> 
-    <source src="sounds/Mission Impossible.mp3" type="audio/mpeg">
-  </audio>
+      <br>
+      <br>
+       <br>
+        <br> 
+     <iframe style="border-radius:12px" src="https://open.spotify.com/playlist/76EdJTuleTorX48Lf8GN74?si=NUvG7d7jShWyCDGbPUpBFQ&pi=u-Er9AYsYtR8qN" width="75%" height="375" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </body>
 </html>
