--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       <br>
        <br>
         <br> 
-  <iframe style="border-radius:12px" src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/76EdJTuleTorX48Lf8GN74?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>" width="75%" height="375" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>screen; picture-in-picture" loading="lazy"></iframe>
+ <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/76EdJTuleTorX48Lf8GN74?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </body>
 </html>
