--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Riti Karthikeyan's Website</title>
   </head>
-  <body bgcolor="#ffffe8">
+  <body bgcolor=" #FFD7E2">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
