--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,8 @@
 	<h3>My favourite Ramen</h3>
     <img src="Porche.JPG" height="300">
 	<h3>My favourite Car Brand</h3>
+    <img src="Pink Motorcycle 2.jpg" height="300">
+	<h3>My Dream Ride</h3>
     <br>
     </center>
     </a>
