--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <br>
        <br>
         <br> 
+     <center>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/76EdJTuleTorX48Lf8GN74?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1d75qVgXTV0cuf2luRdXva?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+     </center>
   </body>
 </html>
