--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <center>
 	<h1>My Portfolio!</h1>
 	<h2>My first Project!</h2>
-	    
+	      <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
     </center>
 	  </body>
 	</html>
