--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
     <center>
 	<h1>My Portfolio!</h1>
 	<h2>My first Project!</h2>
-	      <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
+	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
+	    	<h3>My first Project is build your own cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant!</h3>
     </center>
 	  </body>
 	</html>
