--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 	<h1>My Portfolio!</h1>
 	<h2>My first Project!</h2>
 	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
+	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
 	    	<h3>My first Project is build your own cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant!</h3>
     </center>
 	  </body>
