--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,8 @@
 	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
 	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
 	    	<h3>My first Project is build your own cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant! At the end of the program, a thank you picture pops and the code prints out a "Enjoy Your Cava Bowl!"</h3>
+	<h2>My Second Project!</h2>
+	      <img src="" height="400" alt="centered image" class="aligncenter">
     </center>
 	  </body>
 	</html>
