--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 	    	<h3>My first Project is build your own cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant! At the end of the program, a thank you picture pops and the code prints out a "Enjoy Your Cava Bowl!"</h3>
 	<h2>My Second Project!</h2>
 	      <img src="Game2 Picture.jpg" height="400" alt="centered image" class="aligncenter">
-	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!"</h3>
+	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!</h3>
 	    
     </center>
 	  </body>
