--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
 	<h2>My Second Project!</h2>
 	      <img src="Game2 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!</h3>
-	    
+	<h2>My Third Project!</h2>
+	     <img src="Game3 Picture.jpg" height="400" alt="centered image" class="aligncenter">
+	      <h3>My third Project is Atari Breakout where the player controls the paddle to hit all the bricks with the ball!</h3>
     </center>
 	  </body>
 	</html>
