--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,9 @@
 	<h2>My Third Project!</h2>
 	     <img src="Actual Game3 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My third Project is Atari Breakout where the player controls the paddle to hit all the bricks with the ball!</h3>
+	<h2>My Fourth Project!</h2>
+	     <img src="Game4 Picture.jpg" height="400" alt="centered image" class="aligncenter">
+	      <h3>My Fourth Project is Pencil Catcher where the player catches pencils that fall from the sky while avoiding the erasers falling from the sky!</h3>
     </center>
 	  </body>
 	</html>
