--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <br>
         <br> 
      <center>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1d75qVgXTV0cuf2luRdXva?utm_source=generator"  width="49%" height="352" float:right; frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2Tl1HUsgnkbNSNFNEqD8t4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/76EdJTuleTorX48Lf8GN74?utm_source=generator"  width="49%" height="352" float:left; frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
      </center>
   </body>
