--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
 	<h2>My Fifth Project!</h2>
 	     <img src="game5 picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My fifth project is a fish tank monitor where its to evaluate these results and to address problems in the software</h3>
+	<h2>My sixth Project!</h2>
     </center>
 	  </body>
 	</html>
