--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,10 @@
 	<h2>My Fifth Project!</h2>
 	     <img src="game5 picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My fifth project is a fish tank monitor where its to evaluate these results and to address problems in the software</h3>
-	<h2>My sixth Project!</h2>
+	<h2>My Sixth Project!</h2>
+	    <img src="graph30.png" height="400" alt="centered image" class="aligncenter">
+	     <h3>From this, we can conclude that the rover is located in the marshlands, as the temperature chart shows a stable temperature along with continuous chirping and buzzing noises reflected in the sound graph.</h3>
+	<h2>My Seventh Project!</h2>
 	    <img src="graph30.png" height="400" alt="centered image" class="aligncenter">
 	     <h3>From this, we can conclude that the rover is located in the marshlands, as the temperature chart shows a stable temperature along with continuous chirping and buzzing noises reflected in the sound graph.</h3>
     </center>
