--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
 	    <img src="graph30.png" height="400" alt="centered image" class="aligncenter">
 	     <h3>From this, we can conclude that the rover is located in the marshlands, as the temperature chart shows a stable temperature along with continuous chirping and buzzing noises reflected in the sound graph.</h3>
 	<h2>My Seventh Project!</h2>
-	    <img src="graph30.png" height="400" alt="centered image" class="aligncenter">
-	     <h3>From this, we can conclude that the rover is located in the marshlands, as the temperature chart shows a stable temperature along with continuous chirping and buzzing noises reflected in the sound graph.</h3>
+	    <img src="Game6.jpg" height="400" alt="centered image" class="aligncenter">
+	     <h3>We examined a simulation regarding the evolution of Peppered Moths and recognized how different interactive components of the simulation reflected the real-world process of natural selection that resulted in evolutionary adaptations in the Peppered Moth species.</h3>
     </center>
 	  </body>
 	</html>
