Update and rename portfolio.html to loves.html

--- a/loves.html
+++ b/loves.html
@@ -6,7 +6,7 @@
 	  </head>
 	  <body bgcolor="#E7D2FB">
     <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
+    <a href="loves.html">Get to know me!</a>
     <a href="aboutme.html">About Me</a>
     <center>
 	<h1>My Portfolio!</h1>
