Add loves.css stylesheet to loves.html

--- a/loves.html
+++ b/loves.html
@@ -3,6 +3,8 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+		   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/loves.css">
 	  </head>
 	  <body bgcolor="#E7D2FB">
     <a href="index.html">Home</a>
