--- a/loves.html
+++ b/loves.html
@@ -8,32 +8,24 @@
 	  </head>
 	  <body bgcolor="#E7D2FB">
     <a href="index.html">Home</a>
-    <a href="loves.html">Get to know me!</a>
+    <a href="loves.html">Food Pics!</a>
     <a href="aboutme.html">About Me</a>
     <center>
-	<h1>My Portfolio!</h1>
-	<h2>My first Project!</h2>
+	<h1>My Love for Food!</h1>
+	<h2>Ramen</h2>
 	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
 	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
 	    	<h3>My first Project is build your own Cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant! At the end of the program, a thank you picture pops up and the code prints out "Enjoy Your Cava Bowl!"</h3>
-	<h2>My Second Project!</h2>
+	<h2>Daves Hot Chicken</h2>
 	      <img src="Game2 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!</h3>
-	<h2>My Third Project!</h2>
+	<h2>Indian Food</h2>
 	     <img src="Actual Game3 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My third Project is Atari Breakout where the player controls the paddle to hit all the bricks with the ball!</h3>
-	<h2>My Fourth Project!</h2>
+	<h2>Sweets</h2>
 	     <img src="Game4 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My Fourth Project is Pencil Catcher where the player catches pencils that fall from the sky while avoiding the erasers falling from the sky!</h3>
-	<h2>My Fifth Project!</h2>
-	     <img src="game5 picture.jpg" height="400" alt="centered image" class="aligncenter">
-	      <h3>My fifth project is a fish tank monitor where its to evaluate these results and to address problems in the software</h3>
-	<h2>My Sixth Project!</h2>
-	    <img src="graph30.png" height="400" alt="centered image" class="aligncenter">
-	     <h3>From this, we can conclude that the rover is located in the marshlands, as the temperature chart shows a stable temperature along with continuous chirping and buzzing noises reflected in the sound graph.</h3>
-	<h2>My Seventh Project!</h2>
-	    <img src="Game6.jpg" height="400" alt="centered image" class="aligncenter">
-	     <h3>We examined a simulation regarding the evolution of Peppered Moths and recognized how different interactive components of the simulation reflected the real-world process of natural selection that resulted in evolutionary adaptations in the Peppered Moth species.</h3>
+
     </center>
 	  </body>
 	</html>
