--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body bgcolor=" #FFD7E2">
     <a href="index.html">Home</a>
-    <a href="loves.html">Get to know me!</a>
+    <a href="loves.html">Food Pics!</a>
     <a href="aboutme.html">About Me</a>
     <center style="background-color: light yellow;">
       <h1>Riti's Website</h1>
