Update link text for loves.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 	  </head>
 	  <body bgcolor="#FAAFBA">
     <a href="index.html">Home</a>
-    <a href="loves.html">Get to know me!</a>
+    <a href="loves.html">Food Pics!</a>
     <a href="aboutme.html">About Me</a>
     <center>
 	<h1>All About Me!!</h1>
