--- a/loves.html
+++ b/loves.html
@@ -15,17 +15,17 @@
 	<h2>Ramen</h2>
 	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
 	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
-	    	<h3>My first Project is build your own Cava bowl and you get to choose your own ingredients to put into the bowl just like at a normal restaurant! At the end of the program, a thank you picture pops up and the code prints out "Enjoy Your Cava Bowl!"</h3>
+	    	<h3>I love munching on ramen in the middle of the night and eating it with my friends during hangouts!</h3>
 	<h2>Daves Hot Chicken</h2>
-	      <img src="Game2 Picture.jpg" height="400" alt="centered image" class="aligncenter">
+	      <img src="daves1.JPG" height="400" alt="centered image" class="aligncenter">
 	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!</h3>
 	<h2>Indian Food</h2>
-	     <img src="Actual Game3 Picture.jpg" height="400" alt="centered image" class="aligncenter">
-	      <h3>My third Project is Atari Breakout where the player controls the paddle to hit all the bricks with the ball!</h3>
+	     <img src="indianfood1.JPG" height="400" alt="centered image" class="aligncenter">
+		<img src="indianfood2.JPG" height="400" alt="centered image" class="aligncenter">
+	      <h3>I'm from South India so many of the foods I like are from the southern part of India!</h3>
 	<h2>Sweets</h2>
 	     <img src="Game4 Picture.jpg" height="400" alt="centered image" class="aligncenter">
 	      <h3>My Fourth Project is Pencil Catcher where the player catches pencils that fall from the sky while avoiding the erasers falling from the sky!</h3>
-
     </center>
 	  </body>
 	</html>
