--- a/loves.html
+++ b/loves.html
@@ -18,7 +18,7 @@
 	    	<h3>I love munching on ramen in the middle of the night and eating it with my friends during hangouts!</h3>
 	<h2>Daves Hot Chicken</h2>
 	      <img src="daves1.JPG" height="400" alt="centered image" class="aligncenter">
-	      <h3>My second Project is Crossy Road where the player (chicken) plays and avoids the traffic and if you get to the top you win the game!</h3>
+	      <h3>I LOVE DAVES <3</h3>
 	<h2>Indian Food</h2>
 	     <img src="indianfood1.JPG" height="400" alt="centered image" class="aligncenter">
 		<img src="indianfood2.JPG" height="400" alt="centered image" class="aligncenter">
