Add Fast Food section with images

--- a/loves.html
+++ b/loves.html
@@ -16,6 +16,9 @@
 	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
 	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
 	    	<h3>I love munching on ramen in the middle of the night and eating it with my friends during hangouts!</h3>
+	<h2>Fast Food</h2>
+		 <img src="fastfood1.JPG" height="400" alt="centered image" class="aligncenter">
+		 <img src="fastfood2.JPG" height="400" alt="centered image" class="aligncenter">
 	<h2>Daves Hot Chicken</h2>
 	      <img src="daves1.JPG" height="400" alt="centered image" class="aligncenter">
 	      <h3>I LOVE DAVES <3</h3>
