Refactor image display and heading styles
Updated image layout and headings for better structure.

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,28 +12,25 @@
     <a href="aboutme.html">About Me</a>
     <center>
 	<h1>All About Me!!</h1>
-	<img src="My Picture.JPG" height="400">
-	<img src="My Picture2.jpg" height="400">
+		<div class="image-row">
+		<img src="My Picture.JPG" height="400">
+		<img src="My Picture2.jpg" height="400">
+		</div>
 	<br>
     <h2>This is my family!</h1>
 	<br>
-    <h2> My Mom</h2>
+    <h2>My Mom!</h2>
      <img src="Mom's Picture.jpg" height="300">
-    <h2>My Dad</h2>
+    <h2>My Dad!</h2>
       <img src="Dad's Picture.JPG" height="300">
       <br> 
     <h2>Sachi (My Best Friend <3)</h2>
-      <img src="Sachi1.JPEG" height="300">
-	<img src="Sachi2.JPG" height="300">
-<br>
+    <div class="image-row">
+  <img src="Sachi1.JPEG">
+  <img src="Sachi2.JPG">
+</div>
     <h2>My Friends</h2>
-      <img src="friend1.jpg" height="300">
-      <img src="with aarya.JPG" height="300">
-      <br>
-      <img src="With Brent.JPG" height="300">
-      <img src="Friends4.JPG" height="300">
-      <br>
-    <br>
+
     <h2>My Favourites</h2>
     <img src="Winnie The Pooh.jpg" height="300">
 	<h3>Winnie The Pooh</h3>
