--- a/loves.html
+++ b/loves.html
@@ -13,9 +13,7 @@
     <center>
 	<h1>My Love for Food!</h1>
 	<h2>Ramen</h2>
-	      <img src="Project Cava (1).jpg" height="400" alt="centered image" class="aligncenter">
-	      <img src="Code for CAVA (website).jpg" height="400" alt="centered image" class="aligncenter">
-	    	<h3>I love munching on ramen in the middle of the night and eating it with my friends during hangouts!</h3>
+	      <img src="ramen1.jpg" height="400" alt="centered image" class="aligncenter">
 	<h2>Fast Food</h2>
 		 <img src="fastfood1.JPG" height="400" alt="centered image" class="aligncenter">
 		 <img src="fastfood2.JPG" height="400" alt="centered image" class="aligncenter">
@@ -27,8 +25,8 @@
 		<img src="indianfood2.JPG" height="400" alt="centered image" class="aligncenter">
 	      <h3>I'm from South India so many of the foods I like are from the southern part of India!</h3>
 	<h2>Sweets</h2>
-	     <img src="Game4 Picture.jpg" height="400" alt="centered image" class="aligncenter">
-	      <h3>My Fourth Project is Pencil Catcher where the player catches pencils that fall from the sky while avoiding the erasers falling from the sky!</h3>
+	     <img src="cake1.jpg" height="400" alt="centered image" class="aligncenter">
+		 <img src="cake2.jpg" height="400" alt="centered image" class="aligncenter">
     </center>
 	  </body>
 	</html>
