--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
   <img src="Sachi2.JPG">
 </div>
     <h2>My Friends</h2>
-
+	<img src="friends1.jpg">
     <h2>My Favourites</h2>
     <img src="Winnie The Pooh.jpg" height="300">
 	<h3>Winnie The Pooh</h3>
