Replace home section with new content about origin

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <center style="background-color: light yellow;">
       <h1>Riti's Website</h1>
       <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
-      <h1>My Home</h1>
-      <img src="My house.JPG" height="600" width="600" alt="centered image" class="aligncenter">
-      <h2>My Pool</h2>
-      <img src="My pool.JPG" height="600" width="600"  alt="centered image" class="aligncenter">
-      <h2>My Bedroom</h2>
-      <img src="My Room.JPG" height="600" width="600" alt="centered image" class="aligncenter">
-      <h2>My Garden</h2>
-      <img src="My Garden.JPG" height="600" width="600" alt="centered image" class="aligncenter">
+      <h1>Where I'm from!</h1>
+      <div class="image-row">
+	  <img src="tamilnadu.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="chennaitemple.jpg" height="400" alt="centered image" class="alignright">
+		</div>
+      <h2>My Major for College</h2>
+      <img src="major.jpg" height="400" alt="centered image" class="aligncenter">
    </center>
       <br>
       <br>
