--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="aboutme.html">About Me</a>
     <center style="background-color: light yellow;">
       <h1>Riti's Website</h1>
+		<h2>My name is Riti and I'm a current senior at RBHS. I love to eat, dance, hangout with my friends and binge watch shows.</h2>
       <img src="Winnie The Pooh GIF by Disney.gif" height="400" alt="centered image" class="aligncenter">
       <h1>Where I'm from!</h1>
       <div class="image-row">
