--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
     <center>
 	<h1>All About Me!!</h1>
 		<div class="image-row">
-		<img src="My Picture.JPG" height="400">
+		<img src="mepicture.jpg" height="400">
 		<img src="My Picture2.jpg" height="400">
 		</div>
 	<br>
